--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="hs-caption container">
         <div class="caption-content">
             <div class="row">
-                <div class="col-md-12 col-md-offset-2">
+                <div class="col-md-6 col-md-offset-3" style="zoom:0.6">
                     <div class="clock"></div>
                 </div>
             </div>
