--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="hs-caption container">
         <div class="caption-content">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3" style="zoom:0.6">
+                <div class="col-md-6 col-md-offset-3" style="zoom:0.8">
                     <div class="clock"></div>
                 </div>
             </div>
@@ -89,8 +89,8 @@
     <div class="video-controls-box">
         <div class="container">
             <div class="video-controls " style="color: white">
-                <a id="video-volume" class="fa fa-2x fa-volume-up " style="color: black" href="#">&nbsp;</a>
-                <a id="video-play" class="fa fa-2x fa-pause " style="color:#000;" href="#">&nbsp;</a>
+                <a id="video-volume" class="fa fa-2x fa-volume-up "  href="#">&nbsp;</a>
+                <a id="video-play" class="fa fa-2x fa-pause "  href="#">&nbsp;</a>
             </div>
         </div>
     </div>
