--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
     <link href="assets/css/flipclock.css" rel="stylesheet">
+    <link href="assets/css/events.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Kaushan+Script|Libre+Barcode+39+Text" rel="stylesheet">
 </head>
 <body>
 
@@ -39,7 +41,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand boxback" href="index.html">DAKSH</a>
+            <a class="navbar-brand boxback" href="index.html" style="font-family: 'Libre Barcode 39 Text', cursive;font-size: 300%;">DAKSH</a>
         </div>
 
         <div class="collapse navbar-collapse" id="custom-collapse">
@@ -48,8 +50,8 @@
 
 
 
-                <li><a href="#" class="boxback">About</a></li>
-                <li><a href="#" class="boxback">Events</a></li>
+                <li><a href="#" class="boxback heads">About</a></li>
+                <li><a href="#" class="boxback heads">Events</a></li>
 
 
 
@@ -57,7 +59,7 @@
 
 
 
-                <li><a href="#" class="boxback">Contact</a></li>
+                <li><a href="#" class="boxback heads">Contact</a></li>
 
             </ul>
         </div>
@@ -101,8 +103,121 @@
 
 <!-- WRAPPER -->
 <div class="wrapper">
+    <main style="padding-top: 2.5%;">
+        <h1 class="heads" >Daksh</h1>
+        <div class="container">
+        <p style="    text-align: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">SASTRA University proudly presents the second largest Techno-Management Fest in South
+            India with grandeur and magnificence. Bringing out nurturing talent and flair, it is one stop for all
+            that is exhilarating. Clustering different spheres of technology into one nutshell, Daksh offers an
+            all-round experience in one cup of tea. From Technical Events to sharpen your prowess, to out
+            of the box Techno-Fun events, Daksh keeps molding dexterity. Innovation and Versatility go
+            hand in hand as once again as the Fest returns once again for its next edition with its
+            magnanimity unturned.</p>
+        </div>
+    </main>
+    <main style="padding-top: 1.5%;">
+        <h1 class="heads">Events</h1>
+        <p>Events from daksh</p>
 
+    </main>
+    <ul style="overflow-y: hidden;">
+        <li class="card">
+            <div class="card__flipper">
+                <div class="card__front">
+                    <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                </div>
+                <div class="card__back">
+                    <main style="padding-top: 1%;">
+                        <h3 class="heads">Spardha</h3>
+                        <p style="    text-align: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
+                            Aimed at bringing intellects together, Spardha sets a right platform for budding quizzers to
+                            stand out. With over 100 teams across various cities in south India, dueling in the battle of wits,
+                            Spardha sparks the right start for inquisitive minds.
+                        </p>
+                    </main>
+                </div>
+            </div>
+        </li>
+        <li class="card">
+            <div class="card__flipper">
+                <div class="card__front">
+                    <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                </div>
+                <div class="card__back">
+                    <main style="padding-top: 1%;">
+                    <h3 class="heads">Spectra</h3>
+                    <p style="    text-align: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
+                    Aspiring to discover the tech-savvy you, blaze the trail at Spectra! With a range of mind
+                    bewildering events at your disposal, let your curiosity kill the cat as you strike the hill top! Keep
+                    your spirits up and stay tuned!
+                    </p>
+                    </main>
+                </div>
+            </div>
+        </li>
+        <li class="card">
+            <div class="card__flipper">
+                <div class="card__front">
+                    <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                </div>
+                <div class="card__back">
+                    <main style="padding-top: 1%;">
+                        <h3 class="heads">Hackathon</h3>
+                        <p style="    text-align: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
+                            Moving up the ladder, Hackathon contest is all set to challenge the tech aficionados! Get set to
+                            jump in to the first ever battle at such a grand scale! Warm up as the fixture is all set to begin!
+                        </p>
+                    </main>
+                </div>
+            </div>
+        </li>
+        <li class="card">
+            <div class="card__flipper">
+                <div class="card__front">
+                    <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                </div>
+                <div class="card__back">
+                    <main style="padding-top: 1%;">
+                        <h3 class="heads">Gaming Events</h3>
+                        <p style="    text-align: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
+                            Call of duty, DOTA, FIFA, Mini Militia and what not? Bring out the dauntless gamer inside your
+                            combatant souls, because we are going to swoop down to bring out the belligerent you!
+                        </p>
+                    </main>
+                </div>
+            </div>
+        </li>
+        <li class="card">
+            <div class="card__flipper">
+                <div class="card__front">
+                    <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                </div>
+                <div class="card__back">
+                    <main style="padding-top: 1%;">
+                        <h3 class="heads">Rc Car Race</h3>
+                        <p style="    text-align: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
+                            Fascinated and ready to zoom up for an exciting race? Make four-wheeled wonders that howls
+                            like a hunk, wails vigorously and moves majestically! Feel the adrenaline-rush as your car steals
+                            the limelight! Can your dream car race up front to the finish line first?
+                        </p>
+                    </main>
+                </div>
+            </div>
+        </li>
 
+    </ul>
 
 </div>
 <!-- /WRAPPER -->
