--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link href="assets/css/flipclock.css" rel="stylesheet">
     <link href="assets/css/events.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Kaushan+Script|Libre+Barcode+39+Text" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+
+
 </head>
 <body>
 
@@ -50,7 +53,7 @@
 
 
 
-                <li><a href="#" class="boxback heads">About</a></li>
+                <li><a href="#About" class="boxback heads">About</a></li>
                 <li><a href="#" class="boxback heads">Events</a></li>
 
 
@@ -59,7 +62,7 @@
 
 
 
-                <li><a href="#" class="boxback heads">Contact</a></li>
+                <li><a href="#contact" class="boxback heads">Contact</a></li>
 
             </ul>
         </div>
@@ -102,13 +105,13 @@
 <!-- /HOME -->
 
 <!-- WRAPPER -->
-<div class="wrapper">
+<div class="wrapper" id="About">
     <main style="padding-top: 2.5%;">
         <h1 class="heads" >Daksh</h1>
         <div class="container">
         <p style="    text-align: justify;
-    -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">SASTRA University proudly presents the second largest Techno-Management Fest in South
+    -moz-text-align-last: left;color: black;
+    text-align-last: left;font-family: 'Patua One', cursive;font-size: 150%;padding-bottom: 4%;	">SASTRA University proudly presents the second largest Techno-Management Fest in South
             India with grandeur and magnificence. Bringing out nurturing talent and flair, it is one stop for all
             that is exhilarating. Clustering different spheres of technology into one nutshell, Daksh offers an
             all-round experience in one cup of tea. From Technical Events to sharpen your prowess, to out
@@ -117,7 +120,8 @@
             magnanimity unturned.</p>
         </div>
     </main>
-    <main style="padding-top: 1.5%;">
+    <div style="background: url('assets/images/contact.jpg');">
+    <main  style="padding-top: 1.5%;">
         <h1 class="heads">Events</h1>
         <p>Events from daksh</p>
 
@@ -218,10 +222,71 @@
         </li>
 
     </ul>
-
+</div>
 </div>
 <!-- /WRAPPER -->
 
+<div id='contact'>
+ 	
+ 	
+ 	
+		<div class="row" style="margin:3%">
+				<div class="col-lg-6 col-md-12 col-sm-12">
+					<main style="padding-top: 2.5%;">
+ 	  					<p class="heads" style="font-size:300%;font-size: 600%;" >Nice To <br> Meet You!</p>
+ 					</main>
+ 			    </div>
+				<div class="col-lg-6 col-md-12 col-sm-12">
+					 <form >
+						  <div class="form-group">
+						    <label for="email">Email address:</label>
+						    <input type="email" class="form-control" id="email">
+						  </div>
+						  <div class="form-group">
+						    <label for="name">Name:</label>
+						    <input type="Text" class="form-control" id="name">
+						  </div>
+						  <div class="form-group">
+						    <label for="query">Type your text here:</label>
+						    <input type="Text" class="form-control" id=query>	
+						  </div>
+						  <div style="text-align:-webkit-center;font-weight: bold;" >
+						  	<button  type="submit" class="btn btn-default heads">Contact</button>
+						  </div>
+					</form>
+		  		</div>
+		</div>
+
+		<div class="row" style="padding: 2%;background: url('assets/images/conta.png')">
+			<div class="col-md-4 col-sm-12">
+				 <main  style="padding: 3%; color: black">
+        			<h1 class="heads">Contact Us</h1>
+       			</main>
+       		</div>	
+       		<div class="col-md-4 col-sm-12">
+				<label>E-mail</label>
+				<p>daksh@gmail.com</p>
+				<label style="margin-top: 4%;">Social</label>
+				<p>
+				<a  href="#"><i  class="fa fa-facebook-square fa-3x social" id="social-fb" style="color: #4867aa"></i></a>
+        <a  href="#"><i class="fa fa-twitter-square fa-3x social" id="social-tw" style="color: #1da1f2"></i></a>
+           <a  href="#"><i class="fa fa-google-plus-square fa-3x social" id="social-gp" style="color: #dc4a38"></i></a>
+        <a  href="mailto:harshithmullapudi@gmail.com"><i class="fa fa-envelope-square fa-3x social" id="social-em"></i></a>
+        </p>
+       		</div>
+       		<div class="col-md-4 col-sm-12">
+				 <label>phone:</label>
+				 <p>+91 7871677598</p>       		
+			</div>
+
+		</div>
+</div>
+<!--contact-->
+<div>
+	<div class=footer style="background-color: white;font-family:Alfa Slab one;padding:1.5%;text-align:center; ">
+		<h6>2018 &copy Daksh-SASTRA</h6>
+	</div>
+<div>
 <!-- Scroll-up -->
 <div class="scroll-up">
     <a href="#totop"><i class="fa fa-angle-double-up"></i></a>
