--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
                 <li><a href="#About" class="boxback heads">About</a></li>
-                <li><a href="#Events" class="boxback heads">Events</a></li>
+                <li><a href="#Events" class="boxback heads">Outreach</a></li>
 
 
 
@@ -373,7 +373,7 @@
 <!--contact-->
 
     <div class="footer heads" style="background-color: #efefef;padding:1.5%;text-align:center; ">
-        <h6 >2018 &copy Daksh-SASTRA</h6>
+        <h6 >2018 &copy #include-Daksh-SASTRA</h6>
     </div>
     <div>
         <!-- Scroll-up -->
