--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <link href="assets/css/flipclock.css" rel="stylesheet">
     <link href="assets/css/events.css" rel="stylesheet">
     <link href="assets/css/checkbox.css" rel="stylesheet">
+    <link href="assets/css/slider.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Kaushan+Script|Libre+Barcode+39+Text" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+
+
 </head>
 <body>
 
@@ -54,6 +58,7 @@
 
                 <li><a href="#About" class="boxback heads">About</a></li>
                 <li><a href="#Events" class="boxback heads">Outreach</a></li>
+                <li><a href="#homes" class="boxback heads">Gallery</a></li>
 
 
 
@@ -238,7 +243,11 @@
     </div>
 </div>
 <!-- /WRAPPER -->
-
+<div class="bxslider">
+    <div><img src="assets/images/section-2.jpg" title="Funky roots"></div>
+    <div><img src="assets/images/section-9.jpg" title="The long and winding road"></div>
+    <div><img src="assets/images/section-8.jpg" title="Happy trees"></div>
+</div>
 <div id='contact'>
 
 
@@ -397,6 +406,9 @@
         <script src="assets/js/jquery.fitvids.js"></script>
 
         <script src="assets/js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+
+
         <!--<script src="assets/js/contact.js"></script>-->
         <script src="assets/js/flipclock.min.js"></script>
         <script src="assets/js/custom.js"></script>
