--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 
 
-                <li><a href="#About" class="boxback heads">About</a></li>
-                <li><a href="#Events" class="boxback heads">Outreach</a></li>
+                <li><a href="#About" class="boxback navhead">About</a></li>
+                <li><a href="#Events" class="boxback navhead">Outreach</a></li>
                 <!--<li><a href="#homes" class="boxback heads">Gallery</a></li>-->
-                <li><a href="#homes" class="boxback heads">Campus Ambassador</a></li>
+                <li><a href="#homes" class="boxback navhead">Campus Ambassador</a></li>
 
 
 
@@ -67,7 +67,7 @@
 
 
 
-                <li><a href="#contact" class="boxback heads">Contact</a></li>
+                <li><a href="#contact" class="boxback navhead">Contact</a></li>
 
             </ul>
         </div>
@@ -386,7 +386,7 @@
 <!-------------->
 <!--contact-->
 
-    <div class="footer heads" style="background-color: #efefef;padding:1.5%;text-align:center; ">
+    <div class="footer navhead" style="background-color: #efefef;padding:1.5%;text-align:center; ">
         <h6 >2018 &copy #include-Daksh-SASTRA</h6>
     </div>
     <div>
