--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Kaushan+Script|Libre+Barcode+39+Text" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
 
 </head>
 <body>
@@ -94,9 +94,7 @@
 
     <!-- Youtube player start-->
     <div class="video-player" data-property="{videoURL:'https://www.youtube.com/watch?v=-QY8zXaLq9A', containment:'.module-hero', startAt:0, mute:false, autoPlay:true, loop:true, opacity:1, showControls:false, showYTLogo:false, vol:25}"></div>
-    <!-- Youtube player end -->
-    https:/
-    <!-- Youtube controls start-->
+
     <div class="video-controls-box">
         <div class="container">
             <div class="video-controls " style="color: white">
@@ -135,7 +133,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                        <img class="spardhas" src="assets/images/spardha%20logo.png" style="background-color: black;height: 59%;">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -157,7 +155,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                        <img src="assets/images/spectra.png" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -179,7 +177,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                        <h1 style="font-size: 1420%;font-family: 'Bungee Inline', cursive;background-color: white;margin: 0">H</h1>
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -190,9 +188,7 @@
                                 Moving up the ladder, Hackathon contest is all set to challenge the tech aficionados! Get set to
                                 jump in to the first ever battle at such a grand scale! Warm up as the fixture is all set to begin!
                             </p>
-                            <div style="text-align:-webkit-center;font-weight: bold;" >
-                                <button   class="btn btn-default heads register" style="text-align: center">Register</button>
-                            </div>
+
                         </main>
                     </div>
                 </div>
@@ -200,7 +196,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="https://semantic-ui.com//images/avatar/large/daniel.jpg">
+                        <img src="assets/images/gaming.png" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -221,7 +217,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="./assets/images/robo%20wars.jpg">
+                        <img src="./assets/images/robo%20wars.jpg" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -261,6 +257,9 @@
             </main>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="contactmessage">
+
+            </div>
             <form >
                 <div class="form-group">
                     <label for="email">Email address:</label>
@@ -271,11 +270,11 @@
                     <input type="Text" class="form-control" id="name">
                 </div>
                 <div class="form-group">
-                    <label for="query">Type your text here:</label>
+                    <label for="query">Type <your></your> text here:</label>
                     <textarea class="form-control" rows="3" id=query style="overflow: hidden"></textarea>
                 </div>
                 <div style="text-align:-webkit-center;font-weight: bold;" >
-                    <button   class="btn btn-default heads" >Contact</button>
+                    <button  type="button" class="btn btn-default heads contactquery" >Contact</button>
                 </div>
             </form>
         </div>
@@ -288,13 +287,14 @@
             </main>
         </div>
         <div class="col-md-4 col-sm-12">
-            <label>Name : Abishesk</label>
-            <p>Mail : chairman.daksh@sastra.ac.in<br>Phone number : 9843507874</p>
+            <label>Name : Janani M</label>
+            <p>Student Co-ordinator<br>Mail : coordinator.daksh@sastra.ac.in<br>Phone number : 9092990652</p>
+
 
         </div>
         <div class="col-md-4 col-sm-12">
-            <label>Name : Janani</label>
-            <p>Mail : coordinator.daksh@sastra.ac.in<br>Phone number : 9092990652</p>
+            <label>Name : Abishek V</label>
+            <p>Student Chairman<br>Mail : chairman.daksh@sastra.ac.in<br>Phone number : 9843507874</p>
             <label style="margin-top: 4%;">Social</label>
             <p>
                 <a  href="https://www.facebook.com/daksh.sastra/"><i  class="fa fa-facebook-square fa-3x social" id="social-fb" style="color: #4867aa"></i></a>
@@ -336,6 +336,14 @@
                                 <input type="number" class="form-control" id=regmobile>
                             </div>
                             <div class="form-group">
+                                <label for="query">College Name:</label>
+                                <input type="text" class="form-control" id=regcolname>
+                            </div>
+                            <div class="form-group">
+                                <label for="query">College Registration No:</label>
+                                <input type="text" class="form-control" id=regcolregno>
+                            </div>
+                            <div class="form-group">
                                 <label for="query">T-shirt size (S/M/L) :</label>
                                 <input type="text" class="form-control" id=regsize>
                             </div>
@@ -352,12 +360,6 @@
                                 <input type="checkbox" class="spectra" />
                                 <div class="state">
                                     <label>Spectra</label>
-                                </div>
-                            </div>
-                            <div class="pretty p-default p-fill">
-                                <input type="checkbox" class="hackathon"/>
-                                <div class="state">
-                                    <label>Hackathon</label>
                                 </div>
                             </div>
                             <div class="pretty p-default p-fill">
