--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img class="spardhas" src="assets/images/spardha%20logo.png" style="background-color: black;height: 59%;">
+                        <img class="spardhas" src="assets/images/spardha.png" style="background-color: white;">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
