--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
             </main>
         </div>
         <div class="col-md-4 col-sm-12">
-            <label>Name : Janani M</label>
+            <label>Janani M</label>
             <p>Student Co-ordinator<br>Mail : coordinator.daksh@sastra.ac.in<br>Phone number : 9092990652</p>
 
 
         </div>
         <div class="col-md-4 col-sm-12">
-            <label>Name : Abishek V</label>
+            <label>Abishek V</label>
             <p>Student Chairman<br>Mail : chairman.daksh@sastra.ac.in<br>Phone number : 9843507874</p>
             <label style="margin-top: 4%;">Social</label>
             <p>
