--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
     </div>
 
-    <div class="row" style="padding: 2%;background: url('assets/images/conta.png')">
+    <div class="row" style="padding: 2%;background: url('assets/images/conta.png');font-size: 130%;font-weight: bold">
         <div class="col-md-4 col-sm-12">
             <main  style="padding: 3%; color: black">
                 <h1 class="heads">Contact Us</h1>
