--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img class="spardhas" src="assets/images/spardha.png" style="background-color: white;">
+                        <img class="spardhas" src="assets/images/spardha1.png" style="background-color: white;">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -196,7 +196,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="assets/images/gaming.png" style="background-color: white">
+                        <img src="assets/images/gaming1.png" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
