--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img class="spardhas" src="assets/images/spardha1.png" style="background-color: white;">
+                        <img  class="spardhas img-responsive" src="assets/images/spardha1.png" style="background-color: white;">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -155,7 +155,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="assets/images/spectra.png" style="background-color: white">
+                        <img class="img-responsive spardhas" src="assets/images/spectra.png" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -177,11 +177,11 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <h1 style="font-size: 1420%;font-family: 'Bungee Inline', cursive;background-color: white;margin: 0">H</h1>
+                        <h1 class="spardhas" style="font-size: 1420%;font-family: 'Bungee Inline', cursive;background-color: white;margin: 0">H</h1>
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
-                            <h3 class="heads">Hackathon</h3>
+                            <h3 class="heads ">Hackathon</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
     text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
@@ -196,7 +196,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="assets/images/gaming1.png" style="background-color: white">
+                        <img  class="img-responsive spardhas" src="assets/images/gaming1.png" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -217,7 +217,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <img src="./assets/images/robo%20wars.jpg" style="background-color: white">
+                        <img class="img-responsive spardhas" src="./assets/images/robo%20wars.jpg" style="background-color: white">
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -270,7 +270,7 @@
                     <input type="Text" class="form-control" id="name">
                 </div>
                 <div class="form-group">
-                    <label for="query">Type <your></your> text here:</label>
+                    <label for="query">Type your text here:</label>
                     <textarea class="form-control" rows="3" id=query style="overflow: hidden"></textarea>
                 </div>
                 <div style="text-align:-webkit-center;font-weight: bold;" >
@@ -289,12 +289,18 @@
         <div class="col-md-4 col-sm-12">
             <label>Janani M</label>
             <p>Student Co-ordinator<br>Mail : coordinator.daksh@sastra.ac.in<br>Phone number : 9092990652</p>
-
+            <hr  style="background-color: black">
+            <label>Rahul Ganesh</label>
+            <p>Promotions<br>Mail : promotions.daksh@sastra.ac.in<br>Phone number : 9047896897</p>
 
         </div>
         <div class="col-md-4 col-sm-12">
             <label>Abishek V</label>
             <p>Student Chairman<br>Mail : chairman.daksh@sastra.ac.in<br>Phone number : 9843507874</p>
+            <hr  style="background-color: black">
+            <label>Krishna Meghana</label>
+
+            <p>Outreach<br>Mail : outreach.daksh@sastra.ac.in<br>Phone number : 7285978437</p>
             <label style="margin-top: 4%;">Social</label>
             <p>
                 <a  href="https://www.facebook.com/daksh.sastra/"><i  class="fa fa-facebook-square fa-3x social" id="social-fb" style="color: #4867aa"></i></a>
