--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             <label style="margin-top: 4%;">Social</label>
             <p>
                 <a  href="https://www.facebook.com/daksh.sastra/"><i  class="fa fa-facebook-square fa-3x social" id="social-fb" style="color: #4867aa"></i></a>
+                <a  href="https://www.instagram.com/daksh2k18/"><i class="fa fa-instagram fa-3x social" aria-hidden="true"></i></a>
                 <a  href="mailto:chairman.daksh@sastra.ac.in"><i class="fa fa-envelope-square fa-3x social" id="social-em"></i></a>
             </p>
         </div>
