--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <main style="padding-top: 2.5%;">
         <h1 class="heads" >Daksh</h1>
         <div class="container">
-            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-bottom: 4%;	">
+            <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Times New Roman', sans-serif;font-size: 120%;padding-bottom: 4%;	">
                 SASTRA University proudly presents the second largest Techno-Management Fest in South
                 India with grandeur and magnificence. Bringing out nurturing talent and flair, it is one stop for all
                 that is exhilarating. Clustering different spheres of technology into one nutshell, Daksh offers an
@@ -140,7 +140,7 @@
                             <h3 class="heads">Spardha</h3>
                             <p style="    text-align: justify;
     -moz-text-align-last: left;
-    text-align-last: left;font-family: 'Alfa Slab One', cursive;font-size: 120%">
+    text-align-last: left;font-family: 'Times New Roman', cursive;font-size: 120%">
                                 Aimed at bringing intellects together, Spardha sets a right platform for budding quizzers to
                                 stand out. With over 100 teams across various cities in south India, dueling in the battle of wits,
                                 Spardha sparks the right start for inquisitive minds.
@@ -177,7 +177,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <h1 class="spardhas" style="font-size: 1420%;font-family: 'Bungee Inline', cursive;background-color: white;margin: 0">H</h1>
+                        <h1 class="spardhas" style="font-size: 1420%;font-family: 'Times New Roman', cursive;background-color: white;margin: 0">H</h1>
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
