--- a/dca/index.html
+++ b/dca/index.html
@@ -122,7 +122,10 @@
                                 <label for="regsize">T-shirt size (S/M/L) :</label>
                                 <input type="text" class="form-control" id=regsize>
                             </div>
-
+                            <div class="form-group">
+                                <label for="regno">College registration no/roll no :</label>
+                                <input type="text" class="form-control" id=regno>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -198,7 +201,7 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0">
 
-            <h1 class="heads" style="font-size: 160%;text-align: center">Who can apply?</h1>
+            <h1 class="heads" style="font-size: 130%;text-align: center">Who can apply?</h1>
 
 
             <span style="font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-left: 15%;padding-right: 5%;font-weight: bold	">If you</span>
@@ -207,7 +210,7 @@
             <li>Are active on social media, and</li>
             <li>Are currently studying or have graduated.</li>
         </ol>
-            <h1 class="heads" style="font-size: 160%;text-align: center">Benefits</h1>
+            <h1 class="heads" style="font-size: 130%;text-align: center">Benefits</h1>
 
             <ol style="font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 15%;padding-right: 5%;	margin: 0">
                 <li>Official certification from Daksh.</li>
@@ -224,7 +227,7 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0;border-top: 1px solid">
 
-        <h1 class="heads" style="font-size: 160%;text-align: left;padding-left: 15%;padding-right: 5%;">Additional incentives</h1>
+        <h1 class="heads" style="font-size: 130%;text-align: left;padding-left: 15%;padding-right: 5%;">Additional incentives</h1>
 
         <ol style="font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 15%;padding-right: 5%;	">
             <li>Achievable internship on interns-fair during Daksh</li>
@@ -234,7 +237,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"  style="padding: 0;border-left:1px solid;border-top: 1px solid  ">
 
-        <h1 class="heads" style="font-size: 160%;text-align: center">How does it work?</h1>
+        <h1 class="heads" style="font-size: 130%;text-align: center">How does it work?</h1>
         <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 100%;padding-left: 5%;padding-right: 5%;">
             CAs are assigned diverse tasks from time to time. These tasks range from
             publicizing to organizing workshops. Every task carries a fixed number of points, which are awarded upon completion of the task. For example, one
