--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </main>
     <div style="background: url('assets/images/contact.JPG') no-repeat center center;background-size:cover ">
         <main  style="padding-top: 1.5%;" id="Events">
-            <h1 class="heads">OutReach</h1>
+            <h1 class="heads">Outreach</h1>
 
 
         </main>
