--- a/dca/index.html
+++ b/dca/index.html
@@ -23,7 +23,31 @@
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Kaushan+Script|Libre+Barcode+39+Text" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+<style>
+    .caption-content {
 
+        padding-top: 0;
+        vertical-align: middle !important;
+
+    }
+
+    @media (max-width: 1200px) {
+        .caption-content {
+            padding-top: 0;
+            vertical-align: middle !important;
+
+        }
+    }
+    @media (max-width: 900px) {
+        .caption-content {
+            zoom: 100%;
+            padding-top: 0;
+            vertical-align: middle !important;
+
+
+        }
+    }
+</style>
 
 </head>
 <body>
@@ -139,7 +163,7 @@
 </div>
 <div class="wrapper" id="About">
     <main style="padding-top: 2.5%;background-color: #dddddd96">
-        <h1 class="heads" >Daksh Campus Ambassador Initiative</h1>
+        <h2 class="heads" >Daksh Campus Ambassador Initiative</h2>
         <div class="container">
             <p style="text-align: justify;-moz-text-align-last: left;color: black;text-align-last: left;font-family: 'Inconsolata', sans-serif;font-size: 120%;padding-bottom: 4%;	">
                 As one of the largest techno-management fest in South India, Daksh is one
