--- a/index.html
+++ b/index.html
@@ -246,6 +246,27 @@
     <!--<div><img src="assets/images/section-9.jpg" title="The long and winding road"></div>-->
     <!--<div><img src="assets/images/section-8.jpg" title="Happy trees"></div>-->
 <!--</div>-->
+<div class="row" style="padding: 5%;">
+    <main  style="padding: 3%; color: black">
+        <h1 class="heads">Sponsors</h1>
+    </main>
+    <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-4 ">
+        <img src="assets/images/manya.png" alt="..." class="img-rounded">
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-4">
+        <img src="assets/images/fastrack.png" alt="..." class="img-rounded">
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-4 ">
+        <img src="assets/images/kfc.png" alt="..." class="img-rounded">
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-4 ">
+        <img src="assets/images/greentrends.png" alt="..." class="img-rounded">
+    </div>
+    <div class="col-md-2 col-sm-2 col-xs-4">
+        <img src="assets/images/truefit.png" alt="..." class="img-rounded">
+    </div>
+</div>
+<hr width="70%">
 <div id='contact'>
 
 
