--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <h1 class="spardhas" style="font-size: 1420%;font-family: 'Times New Roman', cursive;background-color: white;margin: 0">H</h1>
+                        <h1 class="spardhas" style="font-size: 1420%;font-family: 'Bungee Inline', cursive;background-color: white;margin: 0">H</h1>
                     </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
@@ -259,7 +259,7 @@
     <div class="col-md-2 col-sm-2 col-xs-4 ">
         <img src="assets/images/kfc.png" alt="..." class="img-rounded">
     </div>
-    <div class="col-md-2 col-sm-2 col-xs-4 ">
+    <div class="col-md-2 col-sm-2 col-xs-4">
         <img src="assets/images/greentrends.png" alt="..." class="img-rounded">
     </div>
     <div class="col-md-2 col-sm-2 col-xs-4">
