--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
             <li class="card">
                 <div class="card__flipper">
                     <div class="card__front">
-                        <h1 class="spardhas" style="font-size: 1420%;font-family: 'Bungee Inline', cursive;background-color: white;margin: 0">H</h1>
-                    </div>
+                        <img class=" spardhas" src="assets/images/hackathon.JPG" style="background-color: white">
+             </div>
                     <div class="card__back">
                         <main style="padding-top: 1%;">
                             <h3 class="heads ">Hackathon</h3>
@@ -301,7 +301,7 @@
         </div>
     </div>
 
-    <div class="row" style="padding: 2%;background: url('assets/images/conta.png');font-size: 130%;font-weight: bold">
+    <div class="row" style="padding: 2%;background: url('assets/images/conta.png');font-size: 130%;">
         <div class="col-md-4 col-sm-12">
             <main  style="padding: 3%; color: black">
                 <h1 class="heads">Contact Us</h1>
